--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,20 @@ docs/.sass-cache/
 .vscode
 jeeda.code-workspace
 .gitconfig
+resources/jeedad/jeedom/__pycache__/__init__.cpython-37.pyc
+resources/jeedad/jeedom/__pycache__/jeedom.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/__init__.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/__version__.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/connection.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/const.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/exceptions.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/utilities.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/vehicle.cpython-37.pyc
+.gitignore
+resources/jeedad/skodaconnect/__pycache__/__init__.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/__version__.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/connection.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/const.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/exceptions.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/utilities.cpython-37.pyc
+resources/jeedad/skodaconnect/__pycache__/vehicle.cpython-37.pyc
