non prise en compte du cache python

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ resources/jeedad/skodaconnect/__pycache__/const.cpython-37.pyc
 resources/jeedad/skodaconnect/__pycache__/exceptions.cpython-37.pyc
 resources/jeedad/skodaconnect/__pycache__/utilities.cpython-37.pyc
 resources/jeedad/skodaconnect/__pycache__/vehicle.cpython-37.pyc
+resources/jeedad/__pycache__/globals.cpython-37.pyc
+resources/jeedad/jeedom/__pycache__/__init__.cpython-37.pyc
+resources/jeedad/jeedom/__pycache__/jeedom.cpython-37.pyc
+resources/jeedad/__pycache__/globals.cpython-37.pyc
+resources/jeedad/jeedom/__pycache__/__init__.cpython-37.pyc
+resources/jeedad/jeedom/__pycache__/jeedom.cpython-37.pyc
